--- a/Workstation/therapeutics/src/Components/Header.css
+++ b/Workstation/therapeutics/src/Components/Header.css
@@ -1,10 +1,11 @@
 .header {
     display: flex;
+
     justify-content: space-between;
     align-items: center;
     background-color: #2c3e50;
     color: #ecf0f1;
-    padding: 20px;
+    padding: 10px 20px;
 }
 
 .left-section {
@@ -14,7 +15,7 @@
 
 .logo img {
     max-width: 50px;
-    margin-right: 15px;
+    margin-right: 10px;
 }
 
 h1 {
@@ -32,7 +33,7 @@ h1 {
     padding: 0;
     margin: 0;
     display: flex;
-    gap: 20px;
+    gap: 15px;
 }
 
 .nav-links a {
